Save new nodes works

--- a/OzricUI/Shared/MainLayout.razor
+++ b/OzricUI/Shared/MainLayout.razor
@@ -167,6 +167,7 @@
             try
             {
                 await Task.Delay(100);
+                await ozricEngine.SetGraphAsync(Graph);
                 await ozricEngine.SetGraphLayoutAsync(GraphLayout);
 
                 InvokeAsync(() => GraphEditState.DoSetCheckpoint());
